# Chaos-engineering

./: .gitignore  README.md  pyproject.toml
config/policies/: engine.yaml
config/policies/kyverno/: cap-hpa-bounds.yaml  cap-replica-change.yaml
config/rbac/: 00-namespace-and-serviceaccounts.yaml  01-observer-clusterrole.yaml  02-experimenter-role.yaml
docs/: architecture.md  phase-2-plan.md  phase-3-plan.md  roadmap.md
examples/: action-allowed-poddelete.json  action-denied-unlabelled-ns.json  capacity-cartservice.json  experiment-cartservice.json  experiment-network-latency.json  target-eks-staging.json  target-kind-local.json
scripts/: kind-down.sh  kind-up.sh  verify-guardrails.sh
src/chaosagent/: __init__.py  cli.py  clock.py  config.py  resolve.py
src/chaosagent/agents/: __init__.py  harness.py  mcp_config.py  permission.py  planner.py
src/chaosagent/analyze/: __init__.py  report.py
src/chaosagent/capacity/: __init__.py  hpa.py  lifecycle.py  opencost.py  recommend.py  report.py  runner.py  signals.py  spec.py
src/chaosagent/domain/: __init__.py  actions.py  enums.py  policy.py  (+1 more)
tests/: fakes.py  test_capacity_lifecycle.py  test_capacity_report.py  test_capacity_spec.py  test_chaosmesh_composer.py  test_cli.py  test_cli_capacity.py  test_cli_run.py  test_config.py  test_dns_composer.py  test_domain_actions.py  test_domain_targets.py  test_executor.py  test_harness.py  test_hpa_composer.py  test_hypothesis.py  test_io_composer.py  test_k6_composer.py  test_lifecycle.py  test_manifests.py  test_mcp_config.py  test_network_composer.py  test_observe_loop.py  test_opencost.py  test_permission.py  test_planner.py  test_policy_engine.py  test_prometheus_client.py  test_recommender.py  test_registry.py  test_report.py  test_resolve.py  test_safety_gate.py  test_scale_executor.py  test_stress_composer.py  test_suite.py  test_time_composer.py
(+30 files in other folders)
