[project]
name = "chaosagent"
version = "0.1.0"
description = "AI agents that plan, run, and verify chaos-engineering experiments and capacity actions against infrastructure targets — safely and autonomously."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
# The live "hands": Claude Agent SDK + Kubernetes client. Kept optional so the
# deterministic core (registry + policy engine + composers) tests without them.
agent = [
    "claude-agent-sdk>=0.1.0",
    "kubernetes>=30.1",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-pyyaml>=6.0",
]

[project.scripts]
chaosagent = "chaosagent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chaosagent"]

# Ship the policy caps inside the wheel so an installed chaosagent loads the real
# guardrail config instead of silently falling back to code defaults.
[tool.hatch.build.targets.wheel.force-include]
"config/policies/engine.yaml" = "chaosagent/_data/engine.yaml"

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "TID"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
packages = ["chaosagent"]
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true

# claude_agent_sdk is an optional extra; type-check cleanly with or without it.
[[tool.mypy.overrides]]
module = ["claude_agent_sdk.*"]
ignore_missing_imports = true
